templates/obbywiki.com/DevelopersList/styles.css
.developers-list {
    width: 100%;
    display: grid;
    grid-template-columns: repeat(3,minmax(0,1fr));
    gap: var(--spacing);
}

.developer-card {
    overflow: hidden;
    border: 1px solid var(--border-color-base);
    border-radius: var(--border-radius-medium);
    color: white;
    padding: var(--space-sm);
}

.developer-card:hover {
    background-color: var(--color-surface-2--hover);
    border-color: var(--border-color-base);
}

/* .developer-card-root {
    padding: 16px;
} */

.developer-card-top {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.developer-card-avatar {
    margin: 0;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-shrink: 0;
    user-select: none;
    border-radius: 50%;
    width: 64px;
    height: 64px;
    border: 2px solid var(--color-progressive);
}

.developer-card-avatar .image-container {
    width: 100%;
    height: 100%;
    text-align: center;
    object-fit: cover;
    color: transparent;
    text-indent: 10000px;
}

.developer-card-top .user-info-container {
    margin-left: 16px;
}

.user-info-container .user-info-username .user-info-username-display {
    gap: var(--spacing);
    align-items: flex-end;
    display: flex;
    font-weight: 700;
    letter-spacing: 0.0075em;
    line-height: 1.6;
    font-size: 1.25rem;
}

.user-info-container .user-info-username .user-info-username-username {
    font-weight: 400;
    font-size: 0.875rem;
    line-height: 1.43;
    letter-spacing: 0.01071em;
    opacity: 0.6;
    margin-bottom: 4px;
}

